add some content

--- a/alfmock.html
+++ b/alfmock.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<nav class="navbar navbar-default" ng-if="alf.person.signedIn">
+<nav class="navbar navbar-default" ng-show="alf.person.signedIn">
     <div class="container-fluid">
         <ul class="nav navbar-nav navbar-right">
             <li>
@@ -58,6 +58,12 @@
         </ul>
     </div>
 </nav>
+
+<div class="container">
+    <h1>Hello to Alfmock!</h1>
+    <p class="lead">Jetzt wird es interessant.</p>
+    <p>Naja, wollen nicht zuviel versprechen.</p>
+</div>
 
 </body>
 </html>
