--- a/alfmock.html
+++ b/alfmock.html
@@ -7,6 +7,7 @@
 
     <title>Alfresco</title>
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/ngstorage/ngStorage.min.js"></script>
     <script src="alfmock.js"></script>
 
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
