--- a/alfmock.html
+++ b/alfmock.html
@@ -37,6 +37,10 @@
                                placeholder="Ihr Passwort"/>
                     </div>
                     <button type="submit" class="btn btn-primary center-block" ng-disabled="!alf.loginForm.$valid">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"
+                              ng-show="alf.loginForm.$valid && !alf.loading"></span>
+                        <span class="glyphicon glyphicon-refresh spinner" aria-hidden="true"
+                              ng-show="alf.loading"></span>
                         Anmelden
                     </button>
                 </div>
@@ -56,7 +60,13 @@
                     &lt;{{ alf.storage.person.email }}&gt;</p>
             </li>
             <li>
-                <button type="button" class="btn btn-primary navbar-btn" ng-click="alf.logout()">Abmelden</button>
+                <button type="button" class="btn btn-info navbar-btn" ng-click="alf.logout()">
+                    <span class="glyphicon glyphicon-ok" aria-hidden="true" ng-show="!alf.loading"></span>
+                        <span class="glyphicon glyphicon-refresh spinner" aria-hidden="true"
+                              ng-show="alf.loading"></span>
+                    Abmelden
+                </button>
+                &nbsp;
             </li>
         </ul>
     </div>
