--- a/alfmock.html
+++ b/alfmock.html
@@ -45,7 +45,8 @@
                     </button>
                 </div>
                 <div class="panel-footer text-success" ng-show="alf.logoutmsg">
-                    {{ alf.logoutmsg }}
+                    <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                    Sie wurden abgemeldet.
                 </div>
             </form>
         </div>
