--- a/alfmock.html
+++ b/alfmock.html
@@ -57,12 +57,13 @@
     <div class="container-fluid">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <p class="navbar-text">{{ alf.storage.person.firstName }} {{ alf.storage.person.lastName }}
+                <p class="navbar-text"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                    {{ alf.storage.person.firstName }} {{ alf.storage.person.lastName }}
                     &lt;{{ alf.storage.person.email }}&gt;</p>
             </li>
             <li>
                 <button type="button" class="btn btn-info navbar-btn" ng-click="alf.logout()">
-                    <span class="glyphicon glyphicon-ok" aria-hidden="true" ng-show="!alf.loading"></span>
+                    <span class="glyphicon glyphicon-off" aria-hidden="true" ng-show="!alf.loading"></span>
                         <span class="glyphicon glyphicon-refresh spinner" aria-hidden="true"
                               ng-show="alf.loading"></span>
                     Abmelden
