--- a/alfmock.html
+++ b/alfmock.html
@@ -10,6 +10,9 @@
     <script src="bower_components/ngstorage/ngStorage.min.js"></script>
     <script src="alfmock.js"></script>
 
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="alfmock.css">
 </head>
@@ -48,6 +51,10 @@
                     <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                     Sie wurden abgemeldet.
                 </div>
+                <div class="panel-footer text-danger" ng-show="alf.errormsg">
+                    <span class="glyphicon glyphicon-alert" aria-hidden="true"></span>
+                    Die Anmeldung ist fehlgeschlagen.
+                </div>
             </form>
         </div>
     </div>
@@ -55,6 +62,22 @@
 
 <nav class="navbar navbar-default" ng-show="alf.storage.person.signedIn">
     <div class="container-fluid">
+        <ul class="nav navbar-nav">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                   aria-expanded="false">Navigation <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Home</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Verfahren 1</a></li>
+                    <li><a href="#">Verfahren 2</a></li>
+                    <li><a href="#">Verfahren 3</a></li>
+                    <li><a href="#">Verfahren 4</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Repository</a></li>
+                </ul>
+            </li>
+        </ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
                 <p class="navbar-text"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>
